src/parse/parsetiger.output
Terminals unused in grammar

   "_cast"
   "_decs"


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | decs

    3 exp: "nil"
    4    | "integer"
    5    | "string"
    6    | "identifier" "[" exp "]" "of" exp
    7    | "identifier" "{" "}"
    8    | "identifier" "{" rule1 "}"
    9    | "new" "identifier"
   10    | lvalue
   11    | "identifier" "(" ")"
   12    | "identifier" "(" rule3 ")"
   13    | lvalue "." "identifier" "(" rule3 ")"
   14    | "-" exp
   15    | exp "+" exp
   16    | exp "-" exp
   17    | exp "*" exp
   18    | exp "/" exp
   19    | exp "=" exp
   20    | exp "<>" exp
   21    | exp ">" exp
   22    | exp "<" exp
   23    | exp ">=" exp
   24    | exp "<=" exp
   25    | exp "&" exp
   26    | exp "|" exp
   27    | "(" ")"
   28    | "(" exps ")"
   29    | lvalue ":=" exp
   30    | "if" exp "then" exp
   31    | "if" exp "then" exp "else" exp
   32    | "while" exp "do" exp
   33    | "for" "identifier" ":=" exp "to" exp "do" exp
   34    | "break"
   35    | "let" decs "in" exps "end"
   36    | "let" decs "in" "end"

   37 rule1: "identifier" "=" exp
   38      | "identifier" "=" exp rule2

   39 rule2: "," "identifier" "=" exp
   40      | "," "identifier" "=" exp rule2

   41 rule3: exp
   42      | exp rule3exp

   43 rule3exp: "," exp
   44         | "," exp rule3exp

   45 lvalue: "identifier"
   46       | lvalueexp

   47 lvalueexp: "identifier" "[" exp "]"
   48          | lvalue "." "identifier"
   49          | lvalueexp "[" exp "]"

   50 exps: exp
   51     | exp expsrec

   52 expsrec: ";" exp
   53        | ";" exp expsrec

   54 decs: %empty
   55     | dec decs

   56 dec: "type" "identifier" "=" ty
   57    | "class" "identifier" "extends" "identifier" "{" rule10 "}"
   58    | "class" "identifier" "{" rule10 "}"
   59    | vardec
   60    | "function" "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   61    | "function" "identifier" "(" tyfields ")" "=" exp
   62    | "function" "identifier" "(" ")" ":" "identifier" "=" exp
   63    | "function" "identifier" "(" ")" "=" exp
   64    | "primitive" "identifier" "(" tyfields ")" ":" "identifier"
   65    | "primitive" "identifier" "(" tyfields ")"
   66    | "primitive" "identifier" "(" ")" ":" "identifier"
   67    | "primitive" "identifier" "(" ")"
   68    | "import" "string"

   69 rule10: classfield
   70       | classfield rule10

   71 vardec: "var" "identifier" ":" "identifier" ":=" exp
   72       | "var" "identifier" ":=" exp

   73 classfields: classfield

   74 classfield: vardec
   75           | "method" "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   76           | "method" "identifier" "(" tyfields ")" "=" exp
   77           | "method" "identifier" "(" ")" ":" "identifier" "=" exp
   78           | "method" "identifier" "(" ")" "=" exp

   79 ty: "identifier"
   80   | "{" tyfields "}"
   81   | "{" "}"
   82   | "array" "of" "identifier"
   83   | "class" "extends" "identifier" "{" classfields "}"
   84   | "class" "extends" "identifier" "{" "}"
   85   | "class" "{" classfields "}"
   86   | "class" "{" "}"

   87 tyfields: "identifier" ":" "identifier"
   88         | "identifier" ":" "identifier" rule5

   89 rule5: "," "identifier" ":" "identifier"
   90      | "," "identifier" ":" "identifier" rule5


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"string" (258) 5 68
"identifier" (259) 6 7 8 9 11 12 13 33 37 38 39 40 45 47 48 56 57 58
    60 61 62 63 64 65 66 67 71 72 75 76 77 78 79 82 83 84 87 88 89
    90
"integer" (260) 4
"&" (261) 25
"array" (262) 82
":=" (263) 29 33 71 72
"break" (264) 34
"_cast" (265)
"class" (266) 57 58 83 84 85 86
":" (267) 60 62 64 66 71 75 77 87 88 89 90
"," (268) 39 40 43 44 89 90
"/" (269) 18
"do" (270) 32 33
"." (271) 13 48
"else" (272) 31
"end" (273) 35 36
"=" (274) 19 37 38 39 40 56 60 61 62 63 75 76 77 78
"extends" (275) 57 83 84
"for" (276) 33
"function" (277) 60 61 62 63
">=" (278) 23
">" (279) 21
"if" (280) 30 31
"import" (281) 68
"in" (282) 35 36
"{" (283) 7 8 57 58 80 81 83 84 85 86
"[" (284) 6 47 49
"<=" (285) 24
"let" (286) 35 36
"(" (287) 11 12 13 27 28 60 61 62 63 64 65 66 67 75 76 77 78
"<" (288) 22
"-" (289) 14 16
"method" (290) 75 76 77 78
"<>" (291) 20
"new" (292) 9
"nil" (293) 3
"of" (294) 6 82
"|" (295) 26
"+" (296) 15
"primitive" (297) 64 65 66 67
"}" (298) 7 8 57 58 80 81 83 84 85 86
"]" (299) 6 47 49
")" (300) 11 12 13 27 28 60 61 62 63 64 65 66 67 75 76 77 78
";" (301) 52 53
"then" (302) 30 31
"*" (303) 17
"to" (304) 33
"type" (305) 56
"var" (306) 71 72
"while" (307) 32
"_decs" (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0
exp (56)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36, on right: 1 6 14 15 16
    17 18 19 20 21 22 23 24 25 26 29 30 31 32 33 37 38 39 40 41 42
    43 44 47 49 50 51 52 53 60 61 62 63 71 72 75 76 77 78
rule1 (57)
    on left: 37 38, on right: 8
rule2 (58)
    on left: 39 40, on right: 38 40
rule3 (59)
    on left: 41 42, on right: 12 13
rule3exp (60)
    on left: 43 44, on right: 42 44
lvalue (61)
    on left: 45 46, on right: 10 13 29 48
lvalueexp (62)
    on left: 47 48 49, on right: 46 49
exps (63)
    on left: 50 51, on right: 28 35
expsrec (64)
    on left: 52 53, on right: 51 53
decs (65)
    on left: 54 55, on right: 2 35 36 55
dec (66)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68, on right: 55
rule10 (67)
    on left: 69 70, on right: 57 58 70
vardec (68)
    on left: 71 72, on right: 59 74
classfields (69)
    on left: 73, on right: 83 85
classfield (70)
    on left: 74 75 76 77 78, on right: 69 70 73
ty (71)
    on left: 79 80 81 82 83 84 85 86, on right: 56
tyfields (72)
    on left: 87 88, on right: 60 61 64 65 75 76 80
rule5 (73)
    on left: 89 90, on right: 88 90


State 0

    0 $accept: . program "end of file"
    1 program: . exp
    2        | . decs
    3 exp: . "nil"
    4    | . "integer"
    5    | . "string"
    6    | . "identifier" "[" exp "]" "of" exp
    7    | . "identifier" "{" "}"
    8    | . "identifier" "{" rule1 "}"
    9    | . "new" "identifier"
   10    | . lvalue
   11    | . "identifier" "(" ")"
   12    | . "identifier" "(" rule3 ")"
   13    | . lvalue "." "identifier" "(" rule3 ")"
   14    | . "-" exp
   15    | . exp "+" exp
   16    | . exp "-" exp
   17    | . exp "*" exp
   18    | . exp "/" exp
   19    | . exp "=" exp
   20    | . exp "<>" exp
   21    | . exp ">" exp
   22    | . exp "<" exp
   23    | . exp ">=" exp
   24    | . exp "<=" exp
   25    | . exp "&" exp
   26    | . exp "|" exp
   27    | . "(" ")"
   28    | . "(" exps ")"
   29    | . lvalue ":=" exp
   30    | . "if" exp "then" exp
   31    | . "if" exp "then" exp "else" exp
   32    | . "while" exp "do" exp
   33    | . "for" "identifier" ":=" exp "to" exp "do" exp
   34    | . "break"
   35    | . "let" decs "in" exps "end"
   36    | . "let" decs "in" "end"
   45 lvalue: . "identifier"
   46       | . lvalueexp
   47 lvalueexp: . "identifier" "[" exp "]"
   48          | . lvalue "." "identifier"
   49          | . lvalueexp "[" exp "]"
   54 decs: . %empty  ["end of file"]
   55     | . dec decs
   56 dec: . "type" "identifier" "=" ty
   57    | . "class" "identifier" "extends" "identifier" "{" rule10 "}"
   58    | . "class" "identifier" "{" rule10 "}"
   59    | . vardec
   60    | . "function" "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   61    | . "function" "identifier" "(" tyfields ")" "=" exp
   62    | . "function" "identifier" "(" ")" ":" "identifier" "=" exp
   63    | . "function" "identifier" "(" ")" "=" exp
   64    | . "primitive" "identifier" "(" tyfields ")" ":" "identifier"
   65    | . "primitive" "identifier" "(" tyfields ")"
   66    | . "primitive" "identifier" "(" ")" ":" "identifier"
   67    | . "primitive" "identifier" "(" ")"
   68    | . "import" "string"
   71 vardec: . "var" "identifier" ":" "identifier" ":=" exp
   72       | . "var" "identifier" ":=" exp

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "class"       shift, and go to state 5
    "for"         shift, and go to state 6
    "function"    shift, and go to state 7
    "if"          shift, and go to state 8
    "import"      shift, and go to state 9
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "primitive"   shift, and go to state 15
    "type"        shift, and go to state 16
    "var"         shift, and go to state 17
    "while"       shift, and go to state 18

    $default  reduce using rule 54 (decs)

    program    go to state 19
    exp        go to state 20
    lvalue     go to state 21
    lvalueexp  go to state 22
    decs       go to state 23
    dec        go to state 24
    vardec     go to state 25


State 1

    5 exp: "string" .

    $default  reduce using rule 5 (exp)


State 2

    6 exp: "identifier" . "[" exp "]" "of" exp
    7    | "identifier" . "{" "}"
    8    | "identifier" . "{" rule1 "}"
   11    | "identifier" . "(" ")"
   12    | "identifier" . "(" rule3 ")"
   45 lvalue: "identifier" .  ["end of file", "&", ":=", "class", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
   47 lvalueexp: "identifier" . "[" exp "]"

    "{"  shift, and go to state 26
    "["  shift, and go to state 27
    "("  shift, and go to state 28

    $default  reduce using rule 45 (lvalue)


State 3

    4 exp: "integer" .

    $default  reduce using rule 4 (exp)


State 4

   34 exp: "break" .

    $default  reduce using rule 34 (exp)


State 5

   57 dec: "class" . "identifier" "extends" "identifier" "{" rule10 "}"
   58    | "class" . "identifier" "{" rule10 "}"

    "identifier"  shift, and go to state 29


State 6

   33 exp: "for" . "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 30


State 7

   60 dec: "function" . "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   61    | "function" . "identifier" "(" tyfields ")" "=" exp
   62    | "function" . "identifier" "(" ")" ":" "identifier" "=" exp
   63    | "function" . "identifier" "(" ")" "=" exp

    "identifier"  shift, and go to state 31


State 8

    3 exp: . "nil"
    4    | . "integer"
    5    | . "string"
    6    | . "identifier" "[" exp "]" "of" exp
    7    | . "identifier" "{" "}"
    8    | . "identifier" "{" rule1 "}"
    9    | . "new" "identifier"
   10    | . lvalue
   11    | . "identifier" "(" ")"
   12    | . "identifier" "(" rule3 ")"
   13    | . lvalue "." "identifier" "(" rule3 ")"
   14    | . "-" exp
   15    | . exp "+" exp
   16    | . exp "-" exp
   17    | . exp "*" exp
   18    | . exp "/" exp
   19    | . exp "=" exp
   20    | . exp "<>" exp
   21    | . exp ">" exp
   22    | . exp "<" exp
   23    | . exp ">=" exp
   24    | . exp "<=" exp
   25    | . exp "&" exp
   26    | . exp "|" exp
   27    | . "(" ")"
   28    | . "(" exps ")"
   29    | . lvalue ":=" exp
   30    | . "if" exp "then" exp
   30    | "if" . exp "then" exp
   31    | . "if" exp "then" exp "else" exp
   31    | "if" . exp "then" exp "else" exp
   32    | . "while" exp "do" exp
   33    | . "for" "identifier" ":=" exp "to" exp "do" exp
   34    | . "break"
   35    | . "let" decs "in" exps "end"
   36    | . "let" decs "in" "end"
   45 lvalue: . "identifier"
   46       | . lvalueexp
   47 lvalueexp: . "identifier" "[" exp "]"
   48          | . lvalue "." "identifier"
   49          | . lvalueexp "[" exp "]"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18

    exp        go to state 32
    lvalue     go to state 21
    lvalueexp  go to state 22


State 9

   68 dec: "import" . "string"

    "string"  shift, and go to state 33


State 10

   35 exp: "let" . decs "in" exps "end"
   36    | "let" . decs "in" "end"
   54 decs: . %empty  ["in"]
   55     | . dec decs
   56 dec: . "type" "identifier" "=" ty
   57    | . "class" "identifier" "extends" "identifier" "{" rule10 "}"
   58    | . "class" "identifier" "{" rule10 "}"
   59    | . vardec
   60    | . "function" "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   61    | . "function" "identifier" "(" tyfields ")" "=" exp
   62    | . "function" "identifier" "(" ")" ":" "identifier" "=" exp
   63    | . "function" "identifier" "(" ")" "=" exp
   64    | . "primitive" "identifier" "(" tyfields ")" ":" "identifier"
   65    | . "primitive" "identifier" "(" tyfields ")"
   66    | . "primitive" "identifier" "(" ")" ":" "identifier"
   67    | . "primitive" "identifier" "(" ")"
   68    | . "import" "string"
   71 vardec: . "var" "identifier" ":" "identifier" ":=" exp
   72       | . "var" "identifier" ":=" exp

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 54 (decs)

    decs    go to state 34
    dec     go to state 24
    vardec  go to state 25


State 11

    3 exp: . "nil"
    4    | . "integer"
    5    | . "string"
    6    | . "identifier" "[" exp "]" "of" exp
    7    | . "identifier" "{" "}"
    8    | . "identifier" "{" rule1 "}"
    9    | . "new" "identifier"
   10    | . lvalue
   11    | . "identifier" "(" ")"
   12    | . "identifier" "(" rule3 ")"
   13    | . lvalue "." "identifier" "(" rule3 ")"
   14    | . "-" exp
   15    | . exp "+" exp
   16    | . exp "-" exp
   17    | . exp "*" exp
   18    | . exp "/" exp
   19    | . exp "=" exp
   20    | . exp "<>" exp
   21    | . exp ">" exp
   22    | . exp "<" exp
   23    | . exp ">=" exp
   24    | . exp "<=" exp
   25    | . exp "&" exp
   26    | . exp "|" exp
   27    | . "(" ")"
   27    | "(" . ")"
   28    | . "(" exps ")"
   28    | "(" . exps ")"
   29    | . lvalue ":=" exp
   30    | . "if" exp "then" exp
   31    | . "if" exp "then" exp "else" exp
   32    | . "while" exp "do" exp
   33    | . "for" "identifier" ":=" exp "to" exp "do" exp
   34    | . "break"
   35    | . "let" decs "in" exps "end"
   36    | . "let" decs "in" "end"
   45 lvalue: . "identifier"
   46       | . lvalueexp
   47 lvalueexp: . "identifier" "[" exp "]"
   48          | . lvalue "." "identifier"
   49          | . lvalueexp "[" exp "]"
   50 exps: . exp
   51     | . exp expsrec

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    ")"           shift, and go to state 35
    "while"       shift, and go to state 18

    exp        go to state 36
    lvalue     go to state 21
    lvalueexp  go to state 22
    exps       go to state 37


State 12

    3 exp: . "nil"
    4    | . "integer"
    5    | . "string"
    6    | . "identifier" "[" exp "]" "of" exp
    7    | . "identifier" "{" "}"
    8    | . "identifier" "{" rule1 "}"
    9    | . "new" "identifier"
   10    | . lvalue
   11    | . "identifier" "(" ")"
   12    | . "identifier" "(" rule3 ")"
   13    | . lvalue "." "identifier" "(" rule3 ")"
   14    | . "-" exp
   14    | "-" . exp
   15    | . exp "+" exp
   16    | . exp "-" exp
   17    | . exp "*" exp
   18    | . exp "/" exp
   19    | . exp "=" exp
   20    | . exp "<>" exp
   21    | . exp ">" exp
   22    | . exp "<" exp
   23    | . exp ">=" exp
   24    | . exp "<=" exp
   25    | . exp "&" exp
   26    | . exp "|" exp
   27    | . "(" ")"
   28    | . "(" exps ")"
   29    | . lvalue ":=" exp
   30    | . "if" exp "then" exp
   31    | . "if" exp "then" exp "else" exp
   32    | . "while" exp "do" exp
   33    | . "for" "identifier" ":=" exp "to" exp "do" exp
   34    | . "break"
   35    | . "let" decs "in" exps "end"
   36    | . "let" decs "in" "end"
   45 lvalue: . "identifier"
   46       | . lvalueexp
   47 lvalueexp: . "identifier" "[" exp "]"
   48          | . lvalue "." "identifier"
   49          | . lvalueexp "[" exp "]"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18

    exp        go to state 38
    lvalue     go to state 21
    lvalueexp  go to state 22


State 13

    9 exp: "new" . "identifier"

    "identifier"  shift, and go to state 39


State 14

    3 exp: "nil" .

    $default  reduce using rule 3 (exp)


State 15

   64 dec: "primitive" . "identifier" "(" tyfields ")" ":" "identifier"
   65    | "primitive" . "identifier" "(" tyfields ")"
   66    | "primitive" . "identifier" "(" ")" ":" "identifier"
   67    | "primitive" . "identifier" "(" ")"

    "identifier"  shift, and go to state 40


State 16

   56 dec: "type" . "identifier" "=" ty

    "identifier"  shift, and go to state 41


State 17

   71 vardec: "var" . "identifier" ":" "identifier" ":=" exp
   72       | "var" . "identifier" ":=" exp

    "identifier"  shift, and go to state 42


State 18

    3 exp: . "nil"
    4    | . "integer"
    5    | . "string"
    6    | . "identifier" "[" exp "]" "of" exp
    7    | . "identifier" "{" "}"
    8    | . "identifier" "{" rule1 "}"
    9    | . "new" "identifier"
   10    | . lvalue
   11    | . "identifier" "(" ")"
   12    | . "identifier" "(" rule3 ")"
   13    | . lvalue "." "identifier" "(" rule3 ")"
   14    | . "-" exp
   15    | . exp "+" exp
   16    | . exp "-" exp
   17    | . exp "*" exp
   18    | . exp "/" exp
   19    | . exp "=" exp
   20    | . exp "<>" exp
   21    | . exp ">" exp
   22    | . exp "<" exp
   23    | . exp ">=" exp
   24    | . exp "<=" exp
   25    | . exp "&" exp
   26    | . exp "|" exp
   27    | . "(" ")"
   28    | . "(" exps ")"
   29    | . lvalue ":=" exp
   30    | . "if" exp "then" exp
   31    | . "if" exp "then" exp "else" exp
   32    | . "while" exp "do" exp
   32    | "while" . exp "do" exp
   33    | . "for" "identifier" ":=" exp "to" exp "do" exp
   34    | . "break"
   35    | . "let" decs "in" exps "end"
   36    | . "let" decs "in" "end"
   45 lvalue: . "identifier"
   46       | . lvalueexp
   47 lvalueexp: . "identifier" "[" exp "]"
   48          | . lvalue "." "identifier"
   49          | . lvalueexp "[" exp "]"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18

    exp        go to state 43
    lvalue     go to state 21
    lvalueexp  go to state 22


State 19

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 44


State 20

    1 program: exp .  ["end of file"]
   15 exp: exp . "+" exp
   16    | exp . "-" exp
   17    | exp . "*" exp
   18    | exp . "/" exp
   19    | exp . "=" exp
   20    | exp . "<>" exp
   21    | exp . ">" exp
   22    | exp . "<" exp
   23    | exp . ">=" exp
   24    | exp . "<=" exp
   25    | exp . "&" exp
   26    | exp . "|" exp

    "&"   shift, and go to state 45
    "/"   shift, and go to state 46
    "="   shift, and go to state 47
    ">="  shift, and go to state 48
    ">"   shift, and go to state 49
    "<="  shift, and go to state 50
    "<"   shift, and go to state 51
    "-"   shift, and go to state 52
    "<>"  shift, and go to state 53
    "|"   shift, and go to state 54
    "+"   shift, and go to state 55
    "*"   shift, and go to state 56

    $default  reduce using rule 1 (program)


State 21

   10 exp: lvalue .  ["end of file", "&", "class", ",", "/", "do", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
   13    | lvalue . "." "identifier" "(" rule3 ")"
   29    | lvalue . ":=" exp
   48 lvalueexp: lvalue . "." "identifier"

    ":="  shift, and go to state 57
    "."   shift, and go to state 58

    $default  reduce using rule 10 (exp)


State 22

   46 lvalue: lvalueexp .  ["end of file", "&", ":=", "class", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
   49 lvalueexp: lvalueexp . "[" exp "]"

    "["  shift, and go to state 59

    $default  reduce using rule 46 (lvalue)


State 23

    2 program: decs .

    $default  reduce using rule 2 (program)


State 24

   54 decs: . %empty  ["end of file", "in"]
   55     | . dec decs
   55     | dec . decs
   56 dec: . "type" "identifier" "=" ty
   57    | . "class" "identifier" "extends" "identifier" "{" rule10 "}"
   58    | . "class" "identifier" "{" rule10 "}"
   59    | . vardec
   60    | . "function" "identifier" "(" tyfields ")" ":" "identifier" "=" exp
   61    | . "function" "identifier" "(" tyfields ")" "=" exp
   62    | . "function" "identifier" "(" ")" ":" "identifier" "=" exp
   63    | . "function" "identifier" "(" ")" "=" exp
   64    | . "primitive" "identifier" "(" tyfields ")" ":" "identifier"
   65    | . "primitive" "identifier" "(" tyfields ")"
   66    | . "primitive" "identifier" "(" ")" ":" "identifier"
   67    | . "primitive" "identifier" "(" ")"
   68    | . "import" "string"
   71 vardec: . "var" "identifier" ":" "identifier" ":=" exp
   72       | . "var" "identifier" ":=" exp

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 54 (decs)

    decs    go to state 60
    dec     go to state 24
    vardec  go to state 25


State 25

   59 dec: vardec .
